--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "antd": "^5.27.6",
     "dayjs": "^1.11.18",
     "dompurify": "^3.3.1",
+    "exceljs": "^4.4.0",
     "firebase": "^12.4.0",
     "jspdf": "^3.0.4",
     "mapbox-gl": "^3.16.0",
@@ -39,7 +40,6 @@
     "recharts": "^2.12.7",
     "turf": "^3.0.14",
     "validator": "^13.15.26",
-    "xlsx": "^0.18.5",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
